# sourcery-analytics

./: .buildinfo  .gitignore  CHANGELOG.md  CNAME  README.md  developer_guide.html  genindex.html  index.html  metrics.html  objects.inv  py-modindex.html  pyproject.toml  renovate.json  search.html  searchindex.js  user_guide.html
.doctrees/: developer_guide.doctree  environment.pickle  index.doctree  metrics.doctree  user_guide.doctree
.doctrees/api/: sourcery_analytics.analysis.doctree  sourcery_analytics.cli.choices.doctree  sourcery_analytics.cli.data.doctree  sourcery_analytics.cli.doctree  sourcery_analytics.cli.partials.doctree  sourcery_analytics.conditions.doctree  sourcery_analytics.doctree  sourcery_analytics.extractors.doctree  sourcery_analytics.logging.doctree  sourcery_analytics.main.doctree  sourcery_analytics.metrics.aggregations.doctree  sourcery_analytics.metrics.cognitive_complexity.doctree  sourcery_analytics.metrics.compounders.doctree  sourcery_analytics.metrics.cyclomatic_complexity.doctree  sourcery_analytics.metrics.doctree  sourcery_analytics.metrics.method_length.doctree  sourcery_analytics.metrics.types.doctree  sourcery_analytics.metrics.utils.doctree  sourcery_analytics.metrics.working_memory.doctree  sourcery_analytics.settings.doctree  sourcery_analytics.utils.doctree  sourcery_analytics.validators.doctree  sourcery_analytics.visitors.doctree
.github/workflows/: on_push.yml  on_push_branch.yml  on_push_main.yml  on_release.yml
_sources/: developer_guide.rst.txt  index.rst.txt  user_guide.rst.txt
_sources/api/: sourcery_analytics.cli.choices.rst.txt  sourcery_analytics.cli.data.rst.txt  sourcery_analytics.cli.partials.rst.txt  sourcery_analytics.cli.rst.txt  sourcery_analytics.conditions.rst.txt  sourcery_analytics.logging.rst.txt  sourcery_analytics.main.rst.txt  sourcery_analytics.metrics.aggregations.rst.txt  sourcery_analytics.metrics.cognitive_complexity.rst.txt  sourcery_analytics.metrics.compounders.rst.txt  sourcery_analytics.metrics.cyclomatic_complexity.rst.txt  sourcery_analytics.metrics.rst.txt  sourcery_analytics.metrics.types.rst.txt  sourcery_analytics.metrics.utils.rst.txt  sourcery_analytics.metrics.working_memory.rst.txt  sourcery_analytics.rst.txt  sourcery_analytics.settings.rst.txt  sourcery_analytics.validators.rst.txt  sourcery_analytics.visitors.rst.txt
_static/css/: custom.css
api/: sourcery_analytics.analysis.html  sourcery_analytics.cli.choices.html  sourcery_analytics.cli.data.html  sourcery_analytics.cli.html  sourcery_analytics.cli.partials.html  sourcery_analytics.conditions.html  sourcery_analytics.extractors.html  sourcery_analytics.html  sourcery_analytics.logging.html  sourcery_analytics.main.html  sourcery_analytics.metrics.aggregations.html  sourcery_analytics.metrics.cognitive_complexity.html  sourcery_analytics.metrics.compounders.html  sourcery_analytics.metrics.cyclomatic_complexity.html  sourcery_analytics.metrics.html  sourcery_analytics.metrics.method_length.html  sourcery_analytics.metrics.types.html  sourcery_analytics.metrics.utils.html  sourcery_analytics.metrics.working_memory.html  sourcery_analytics.settings.html  sourcery_analytics.utils.html  sourcery_analytics.validators.html  sourcery_analytics.visitors.html
data/: example.py  pycon.py
docs/source/: architecture.rst  conf.py  developer_guide.rst  index.rst  metrics.rst  user_guide.rst
sourcery_analytics/: __init__.py  __main__.py  aggregations.py  analysis.py  cli.py  conditions.py  extractors.py  logging.py  main.py  settings.py  utils.py  validators.py  visitors.py
sourcery_analytics/cli/: __init__.py  choices.py  data.py  partials.py
sourcery_analytics/metrics/: __init__.py  aggregations.py  cognitive_complexity.py  collectors.py  compounders.py  (+5 more)
tests/: conftest.py  test_aggregations.py  test_analysis.py  test_conditions.py  test_extractors.py  test_main.py  test_settings.py  test_utils.py  test_visitors.py
(+18 files in other folders)
