[tool.poetry]
name = "sourcery-analytics"
version = "0.1.0"
description = ""
authors = ["Ben <ben@sourcery.ai>"]

[tool.poetry.scripts]
sourcery-analytics = "sourcery_analytics.main:app"

[tool.poetry.dependencies]
python = "^3.9"
astroid = "2.11.2"
typer = "0.4.1"
sphinx-material = "0.0.35"
rich = "12.3.0"
more-itertools = "8.12.0"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
pytest = "^7.1.1"
Sphinx = "^4.5.0"
black = "^22.3.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]

[[tool.mypy.overrides]]
module = ["astroid", "astroid.nodes", "astroid.manager"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob=\"**/*.rst\""