[tool.poetry]
name = "sourcery-analytics"
version = "0.0.0"
description = "sourcery-analytics is a library and command-line interface (CLI) for analyzing the code quality of Python packages, modules, or source code."
authors = ["Ben Martineau <ben@sourcery.ai>"]
readme = "README.md"
homepage = "https://github.com/sourcery-ai/sourcery-analytics"
documentation = "https://sourcery-analytics.sourcery.ai/"
keywords = ["cli", "code-quality", "python"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
]


[tool.poetry.scripts]
sourcery-analytics = "sourcery_analytics.main:app"

[tool.poetry.dependencies]
python = "^3.9"
astroid = "2.11.2"
typer = "0.4.1"
rich = "12.3.0"
more-itertools = "8.12.0"
tomli = "2.0.1"
pydantic = "1.9.0"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
pytest = "^7.1.1"
Sphinx = "^4.5.0"
sphinx-material = "^0.0.35"
black = "^22.3.0"
pytest-cov = "^3.0.0"
sphinx-copybutton = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]

[[tool.mypy.overrides]]
module = ["astroid", "astroid.nodes", "astroid.manager"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob=\"**/*.rst\""

[tool.sourcery-analytics]

[tool.sourcery-analytics.thresholds]
cyclomatic_complexity = 5
cognitive_complexity = 5
